test/classes/hannah/configAtomicsNotSupported.good
configAtomicsNotSupported.chpl:1: error: config variables of atomic type are not supported
