test/classes/hannah/configAtomicsNotSupported.chpl
config var n$ : atomic int;
